--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section class="wrapper" >
         <div class="grid-container">
             <div class="sidebar">
-                <img class="sidebar--photo" src="img/my_photo.jpg" width="100%" height="450px" alt="My photo">
+                <img class="sidebar--photo" src="images/my_photo.jpg" height="450" alt="My photo">
                 	<!--contacts container-->
 				<div class="sidebar--contact">
                     <div class="sidebar--contact-wrap">
@@ -23,7 +23,7 @@
                         </div>
                         <div class="sidebar--contact__info"> 
                             <span>E:</span>
-                             <a class="sidebar--contact__info-link" href="perederiyalexsandr@gmail.com">perederiyalexsandr@gmail.com</a>
+                             <a class="sidebar--contact__info-link" href="mailto:perederiyalexsandr@gmail.com">perederiyalexsandr@gmail.com</a>
                         </div>
                     </div>					
                     <!-- Tech Skills container-->
@@ -34,10 +34,12 @@
                                 <li class="sidebar--contact__skills-li align-items-center d-flex">CCS3</li>
                                 <li class="sidebar--contact__skills-li align-items-center d-flex">GIT</li>
                                 <li class="sidebar--contact__skills-li align-items-center d-flex">Gulp</li>
+                                <li class="sidebar--contact__skills-li align-items-center d-flex">SASS</li>
                                 <li class="sidebar--contact__skills-li align-items-center d-flex">Grid</li>
                                 <li class="sidebar--contact__skills-li align-items-center d-flex">Flex</li>
                                 <li class="sidebar--contact__skills-li align-items-center d-flex">Old School</li>
                                 <li class="sidebar--contact__skills-li align-items-center d-flex">BEM</li>
+                                <li class="sidebar--contact__skills-li align-items-center d-flex">Photoshop</li>
                             </ul>
                     </div>                   
                     <!-- Soft Skills container-->
@@ -56,7 +58,7 @@
             <div class="content">
                 <h6 class="content__title-position">html coder</h6>
                 <section class="content__name">
-                    <h1 class="content__name--title">Perederiy Alexsander</h1>
+                    <h1 class="content__name--title">Perederiy Alexsandr</h1>
                     <p class="content__name--text">
                         <span class="content__name--text-span">Personal qualities:</span>dedication, ambition, sociability, stress resistance. Interested in IT development. High self-motivation.
                     </p>
@@ -65,13 +67,13 @@
                     <h4 class="content__projects--title">projects</h4>
                     <ol class="content__projects--list">
                         <li class="content__projects-link">
-                            <a href="https://github.com/shurazne/form" target="blanc" class="content__project--item">https://github.com/shurazne/form</a>
+                            <a href="https://shurazne.github.io/burgundia.github.io/." target="blanc" class="content__project--item"> https://shurazne.github.io/burgundia</a>
                             <span>..................</span>
                             <span  class ="content__project--span">HTML5, CCS3</span>
                         </li>
                         <li class="content__projects-link">
-                            <a href="https://htmlacademy.ru/study" target="blanc" class="content__project--item">https://htmlacademy.ru/study</a>
-                            <span>..................</span>
+                            <a href="https://shurazne.github.io/-phantom.github.io" target="blanc" class="content__project--item">https://github.com/phantom</a>
+                            <span>..................................</span>
                             <span  class ="content__project--span">HTML5, CCS3</span>
                         </li>
                     </ol>
